# S21FEProCamera

./: Analisis_Tecnico_S21FEProCamera.md  LICENSE  README.md  analisis_samsung_original.md  build.gradle  gradle.properties  gradlew  informe_actualizacion.md  informe_analisis_proyecto.md  sensor_specs.txt  settings.gradle
.github/workflows/: main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  denoise_processor.cpp  hdr_processor.cpp  image_processor.cpp  native-lib.cpp
app/src/main/java/com/s21fe/procamera/: BurstCaptureManager.java  CameraDiagnostic.java  HDRProcessingPipeline.java  MainActivity.java  ManualCameraControls.java  NativeLib.java  SettingsActivity.java
app/src/main/res/drawable/: gallery_placeholder_bg.xml  glass_panel_bg.xml  ic_launcher_foreground.xml  info_bar_bg.xml  s26_shutter_bg.xml  shutter_button_bg.xml  slider_thumb.xml  slider_track.xml  zoom_button_bg.xml  zoom_panel_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: auditoria_tecnica_fase3.md  gcam_pipeline_design.md  opencv_integration_guide.md
opencv/: CMakeLists.txt  build.gradle
